# TestRepository

./: .gitignore  LICENSE  README.md
01. First Steps in Programming/: CMakeLists.txt
01. First Steps in Programming/simple_tasks/: CalculateRectangularArea.cpp  Count1to20.cpp  Expression.cpp  HelloSoftUni.cpp
03. Exercise - SimpleOperationsAndCalculation/: CMakeLists.txt
03. Exercise - SimpleOperationsAndCalculation/simple_tasks/: RadiansToDegrees.cpp  alcoholMarket.cpp  charityCampaign.cpp  convertorUSDtoBGN.cpp  danceHall.cpp  rectangleArea.cpp  rectangleAreaSecond.cpp  tailoringWorkshop.cpp
06. Nested Conditional Statement/: CMakeLists.txt
06. Nested Conditional Statement/simple_task/: FruitOrVegetable.cpp  FruitShop.cpp  InvalidNumber.cpp  PersonalTitles.cpp  SkiTrip.cpp  SmallShop.cpp  TradeCommissions.cpp
08. While-loop/: CMakeLists.txt
08. While-loop/Simple-Tasks/: AccountBalance.cpp  Graduation.cpp  GraduationPt2.cpp  MaxNumber.cpp  MinNumber.cpp  Moving.cpp  NumberInRange1to100.cpp  Sequence2k-plus-1.cpp
CalculateRectangularArea/: CMakeLists.txt  main.cpp
